# emi-calc

./: .gitignore  Cargo.toml  Procfile  README.md  package-lock.json  package.json
emi/: package.json
emi/src/: App.js  Game.js  index.css  index.js
src/: emi.rs  lib.rs  main.rs
