[package]
name = "emi-calc"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "service"
path = "src/main.rs"

[dependencies]
actix-web = "1.0.8"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0"